--- a/project-App/manifest.json
+++ b/project-App/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "若依移动端",
+    "name" : "手机问答系统",
     "appid" : "__UNI__DEB750A",
     "description" : "",
     "versionName" : "1.1.0",
