--- a/project-App/package.json
+++ b/project-App/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.7.2",
     "element-ui": "^2.15.14",
     "file-saver": "^2.0.5"
